# stellar-tipjar-contracts

./: Cargo.toml
.github/workflows/: test.yml
contracts/tipjar/: Cargo.toml
contracts/tipjar/src/: lib.rs  storage.rs  upgrade.rs
contracts/tipjar/src/bridge/: mod.rs  relayer.rs  validator.rs
contracts/tipjar/src/integrations/: swap.rs
contracts/tipjar/src/interfaces/: dex.rs  mod.rs  nft.rs
contracts/tipjar/src/privacy/: commitment.rs  mod.rs  zk_proof.rs
contracts/tipjar/test_snapshots/tests/: test_balance_tracking_and_withdraw.1.json  test_leaderboard_offset_past_end_returns_empty.1.json  test_leaderboard_queries_available_while_paused.1.json  test_leaderboard_tiebreaker_ordering.1.json  test_leaderboard_tip_updates_all_periods.1.json  test_leaderboard_tip_with_message_updates_aggregates.1.json  test_leaderboard_zero_limit_returns_empty.1.json  test_multi_token_balance_and_withdraw.1.json  test_pause_unpause.1.json  test_tip_batch_events_match_single_tip.1.json  test_tipping_functionality_multi_token.1.json
contracts/tipjar/tests/: quickcheck_properties.rs  tip_message_tests.rs
scripts/: run-tests.sh  run_integration_tests.sh  start-simulator.sh
sdk/typescript/: package-lock.json
sdk/typescript/src/: TipJarContract.ts  types.ts
simulator/: Cargo.toml
simulator/src/: debugger.rs  lib.rs  main.rs  simulator.rs  state_manager.rs
simulator/tests/: simulator_tests.rs
tests/: bridge_tests.rs  privacy_tests.rs
tests/integration/: Cargo.toml  README.md  tip_flow_test.rs
