[package]
name = "tipjar-simulator"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[[bin]]
name = "tipjar-sim"
path = "src/main.rs"

[[test]]
name = "simulator_tests"
path = "tests/simulator_tests.rs"

[dependencies]
tipjar = { path = "../contracts/tipjar" }
soroban-sdk = { workspace = true, features = ["testutils"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
